@@ -133,8 +133,32 @@ object Submodules {
       commonSettings,
       // Now uses Scala 2.13.12 (from ThisBuild) with Spark 3.5.7
       name := "spark-jobs",
-      Test / fork := false,
+      Test / fork := true,  // Fork tests to avoid classloader conflicts
       Test / baseDirectory := file("."),   // since we have a config using FiloDB project root as relative path
+      // Use Flat classloader strategy to avoid NoClassDefFoundError for Cassandra driver's JmxReporter
+      // This is needed because Spark 3.5.x uses Dropwizard Metrics 4.x which moved JmxReporter to a separate module
+      Test / classLoaderLayeringStrategy := ClassLoaderLayeringStrategy.Flat,
+      // Force metrics-core 3.2.2 for Cassandra driver compatibility
+      // Cassandra driver 3.7.1 requires com.codahale.metrics.JmxReporter which only exists in metrics-core 3.x
+      dependencyOverrides += "io.dropwizard.metrics" % "metrics-core" % "3.2.2",
+      // JDK 17+ requires --add-opens for Spark to access internal Java APIs
+      Test / javaOptions ++= Seq(
+        "--add-opens=java.base/java.lang=ALL-UNNAMED",
+        "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+        "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+        "--add-opens=java.base/java.io=ALL-UNNAMED",
+        "--add-opens=java.base/java.net=ALL-UNNAMED",
+        "--add-opens=java.base/java.nio=ALL-UNNAMED",
+        "--add-opens=java.base/java.util=ALL-UNNAMED",
+        "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+        "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+        "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+        "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
+        "--add-opens=java.base/sun.security.action=ALL-UNNAMED",
+        "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED",
+        "--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED",
+        "-Djdk.reflect.useDirectMethodHandle=false"
+      ),
       assemblySettings,
       scalacOptions += "-language:postfixOps",
       libraryDependencies ++= sparkJobsDeps
